package ch08_01;

/**
 * program: java-learn->Human
 * description: 人类总称
 * author: gerry
 * created: 2020-03-20 20:50
 **/
public interface Human {

    /**
     * 每个人种的皮肤都有相应的颜色
     */
    public void getColor();

    /**
     * 人类会说话
     */
    public void talk();
}
